Apache Tez Change Log
=====================

Release 0.7.1: Unreleased

INCOMPATIBLE CHANGES
  TEZ-2679. Admin forms of launch env settings
  TEZ-2949. Allow duplicate dag names within session for Tez.
  TEZ-2972. Avoid task rescheduling when a node turns unhealthy

ALL CHANGES:
  TEZ-3147. Intermediate mem-to-mem: Fix early exit when only one segment can fit into memory
  TEZ-1911. MergeManager's unconditionalReserve() should check for memory limits before allocating.
  TEZ-3141. mapreduce.task.timeout is not translated to container heartbeat timeout
  TEZ-3128. Avoid stopping containers on the AM shutdown thread.
  TEZ-3129. Tez task and task attempt UI needs application fails with NotFoundException
  TEZ-3114. Shuffle OOM due to EventMetaData flood
  TEZ-3102. Fetch failure of a speculated task causes job hang
  TEZ-3137. Tez task failed with illegal state exception in recovery
  TEZ-3126. Log reason for not reducing parallelism
  TEZ-3123. Containers can get re-used even with conflicting local resources.
  TEZ-3117. Deadlock in Edge and Vertex code
  TEZ-3107. tez-tools: Log warn msgs in case ATS has wrong values (e.g startTime > finishTime).
  TEZ-3103. Shuffle can hang when memory to memory merging enabled
  TEZ-3104. Tez fails on Bzip2 intermediate output format on hadoop 2.7.1 and earlier
  TEZ-3093. CriticalPathAnalyzer should be accessible via zeppelin
  TEZ-3089. TaskConcurrencyAnalyzer can return negative task count with very large jobs
  TEZ-2307. Possible wrong error message when submitting new dag
  TEZ-3076. Reduce merge memory overhead to support large number of in-memory mapoutputs
  TEZ-3066. TaskAttemptFinishedEvent ConcurrentModificationException in recovery or history logging services.
  TEZ-3036. Tez AM can hang on startup with no indication of error
  TEZ-3052. Task internal error due to Invalid event: T_ATTEMPT_FAILED at FAILED
  TEZ-3046. Compilation issue in tez-runtime-internals of branch-0.7